src/snapshots/crochet__parser__tests__literals-3.snap
---
source: src/parser.rs
expression: "parse(\"\\\"hello\\\"\")"
---
Program {
    body: [
        Expr {
            span: 0..7,
            expr: Lit(
                Str(
                    Str {
                        span: 0..7,
                        value: "hello",
                    },
                ),
            ),
        },
    ],
}
