src/snapshots/crochet__parser__tests__literals.snap
---
source: src/parser.rs
expression: "parse(\"10\")"
---
Program {
    body: [
        Expr {
            span: 0..2,
            expr: Lit(
                Num(
                    Num {
                        span: 0..2,
                        value: "10",
                    },
                ),
            ),
        },
    ],
}
