src/snapshots/crochet__parser__tests__operations-10.snap
---
source: src/parser.rs
expression: "parse(\"let cond = a != b\")"
---
Program {
    body: [
        Decl {
            span: 0..17,
            pattern: Ident(
                Ident {
                    span: 4..8,
                    name: "cond",
                },
            ),
            value: Op(
                Op {
                    span: 11..17,
                    op: Neq,
                    left: Ident(
                        Ident {
                            span: 11..12,
                            name: "a",
                        },
                    ),
                    right: Ident(
                        Ident {
                            span: 16..17,
                            name: "b",
                        },
                    ),
                },
            ),
        },
    ],
}
