src/snapshots/crochet__parser__tests__operations-3.snap
---
source: src/parser.rs
expression: "parse(\"(a + b) * c\")"
---
Program {
    body: [
        Expr {
            span: 0..11,
            expr: Op(
                Op {
                    span: 1..11,
                    op: Mul,
                    left: Op(
                        Op {
                            span: 1..6,
                            op: Add,
                            left: Ident(
                                Ident {
                                    span: 1..2,
                                    name: "a",
                                },
                            ),
                            right: Ident(
                                Ident {
                                    span: 5..6,
                                    name: "b",
                                },
                            ),
                        },
                    ),
                    right: Ident(
                        Ident {
                            span: 10..11,
                            name: "c",
                        },
                    ),
                },
            ),
        },
    ],
}
