src/snapshots/crochet__parser__tests__operations-7.snap
---
source: src/parser.rs
expression: "parse(\"a >= b\")"
---
Program {
    body: [
        Expr {
            span: 0..6,
            expr: Op(
                Op {
                    span: 0..6,
                    op: GtEq,
                    left: Ident(
                        Ident {
                            span: 0..1,
                            name: "a",
                        },
                    ),
                    right: Ident(
                        Ident {
                            span: 5..6,
                            name: "b",
                        },
                    ),
                },
            ),
        },
    ],
}
